# esphome-device-builder-frontend

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-approve-dependabot.yml  auto-release.yml  pr-labels.yaml  release.yml  test.yml  translations-upload.yml  yamllint.yml
build-scripts/: build.cjs  dev-server.cjs  gen-language-manifest.cjs  only-npm.cjs  rspack.cjs  translations-lib.ts  translations.ts
public/: __init__.py  index.html
src/: entrypoint.ts
src/api/: api-error.ts  esphome-api.ts  index.ts  mock.ts  types.ts
src/common/: docs.ts  localize.ts
src/components/: accept-peer-dialog.ts  adopt-dialog.ts  ansi-log.ts  api-key-dialog.ts  app-shell.ts  apply-install-method.ts  archived-devices-dialog.ts  base-dialog.ts  clone-device-dialog.ts  codemirror-editor-element.ts  command-dialog.ts  command-palette-actions.ts  command-palette.styles.ts  command-palette.ts  confirm-dialog.ts  confirm-queued-update-dialog.ts  device-card.ts  discovered-device-card.ts  edit-pairing-endpoint-dialog.ts  esphome-header-actions.styles.ts  esphome-header-actions.ts  esphome-layout.ts  esphome-login.ts  feedback-dialog.ts  firmware-install-dialog.ts  firmware-jobs-dialog.ts  friendly-name-dialog.ts  (+32 more)
test/: _fake-host.ts  _lit-template-walker.ts  _make-configured-device.ts  _make-firmware-job.ts  _press-enter.ts  global-setup.mjs
(+763 files in other folders)
